<resources>
    <string name="tag">PRESTASIM</string>
    <string name="app_name">Prestasim</string>
    <string name="contentImages" />
    <string name="login">Iniciar Sesión</string>
    <string name="register">Regístrate</string>
    <string name="by_sambi">By Moviles UPC</string>
    <string name="dni">DNI</string>
    <string name="password">Contraseña</string>
    <string name="loading">Cargando ..</string>
    <string name="should_complete_fields">Debe completar los campos</string>
    <string name="login_incorrect">Dni y/o contraseña incorrectos</string>
    <string name="register_now">Regístrate ahora</string>
    <string name="phone">Telefono</string>
    <string name="name">Nombres</string>
    <string name="email">Correo Electrónico</string>
    <string name="birthDate">Fecha de Nacimiento  (dd/MM/yyyy)</string>
    <string name="accept">Acepto los términos y condiciones</string>
    <string name="should_authorize">Debe autorizar el registro</string>
    <string name="title_activity_menu">Prestasim</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="new_request">Nueva Solicitud</string>
    <string name="history_request_desc">Historial de Solicitudes</string>
    <string name="request_results_desc">Opciones de Préstamo</string>
    <string name="history_request">Historial</string>
    <string name="my_info">Mi Informacion</string>
    <string name="close_session">Cerrar Sesion</string>

    <string name="payment_ranks">Rango de Ingreso</string>
    <string name="welcome_msg">Bienvenido(a),</string>
    <string name="cancel">Cancelar</string>
    <string name="update">Actualizar</string>

    <string name="loan_type">Tipo de Préstamo</string>
    <string name="amount_hint">Monto (S/.)</string>
    <string name="installment">Plazo (meses)</string>
    <string name="simulate_btn">Simular</string>
    <string name="register_btn">Registrar</string>

    <string name="request_type">Tipo de Préstamo:</string>
    <string name="request_amount">Monto Simulado:</string>
    <string name="request_date">Fecha:</string>
    <string name="request_installments">Plazo:</string>
    <string name="request_id">N° Solicitud:</string>

    <string name="request_result_entity">Entidad:</string>
    <string name="request_result_amount">Monto Cuota:</string>

    <!-- messages -->
    <string name="reg_err_empty_amount">Por favor ingrese un monto solicitado</string>
    <string name="reg_err_empty_options_request">No hay entidades que otorguen
        préstamos con las características elegidas</string>

</resources>
