<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_new_request"
            android:icon="@drawable/ic_cellphone_black_24dp"
            android:title="@string/new_request"/>
        <item
            android:id="@+id/nav_history_request"
            android:icon="@drawable/ic_web_black_24dp"
            android:title="@string/history_request"/>
        <item
            android:id="@+id/nav_my_info"
            android:icon="@drawable/ic_cloud_tags_black_24dp"
            android:title="@string/my_info"/>

        <item
            android:id="@+id/nav_close"
            android:icon="@drawable/ic_close_black_24dp"
            android:title="@string/close_session"/>
    </group>

</menu>
