<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:gravity="center"
              android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="25dp">

            <TextView
                android:id="@+id/dniTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dni" />

            <EditText
                android:id="@+id/nameET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_ets"
                android:inputType="text"
                android:padding="6dp"
                android:textSize="13sp"
                android:hint="@string/name"
                android:layout_marginTop="15dp"
                android:textColor="@android:color/black"/>

            <EditText
                android:id="@+id/passwordET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_ets"
                android:inputType="textPassword"
                android:padding="6dp"
                android:hint="@string/password"
                android:layout_marginTop="15dp"
                android:textSize="13sp"
                android:textColor="@android:color/black"/>

            <EditText
                android:id="@+id/birthDateET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_ets"
                android:inputType="date"
                android:padding="6dp"
                android:hint="@string/birthDate"
                android:layout_marginTop="15dp"
                android:textSize="13sp"
                android:textColor="@android:color/black"/>

            <EditText
                android:id="@+id/emailET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_ets"
                android:inputType="textEmailAddress"
                android:padding="6dp"
                android:hint="@string/email"
                android:layout_marginTop="15dp"
                android:textSize="13sp"
                android:textColor="@android:color/black"/>

            <EditText
                android:id="@+id/phoneET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_ets"
                android:inputType="phone"
                android:padding="6dp"
                android:hint="@string/phone"
                android:layout_marginTop="15dp"
                android:textSize="13sp"
                android:maxLength="10"
                android:textColor="@android:color/black"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/payment_ranks"
                android:layout_marginTop="15dp" />

            <Spinner
                android:id="@+id/paymentRanksSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:textSize="13sp"
                android:layout_marginTop="5dp"
                android:textColor="@android:color/black"
                android:spinnerMode="dropdown" >
            </Spinner>
            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/btnUpdate"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/update"
                    android:textAllCaps="false"
                    android:theme="@style/btn_green"/>

                <Button
                    android:id="@+id/btnReset"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/cancel"
                    android:textAllCaps="false"
                    android:theme="@style/btn_gray"
                    android:layout_gravity="right" />

            </GridLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>