<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context="pe.edu.upc.prestasim.activities.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:contentDescription="@string/contentImages"
            android:src="@drawable/logo"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight=".5"
                android:text="@string/login"
                android:textAllCaps="false"
                android:theme="@style/btn_green"/>

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight=".5"
                android:text="@string/register"
                android:textAllCaps="false"
                android:theme="@style/btn_green"/>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/by_sambi"
        android:textColor="@android:color/black"
        android:textSize="13sp"/>

</RelativeLayout>
