<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="false"
    android:orientation="vertical"
    tools:context="pe.edu.upc.prestasim.activities.LoginActivity">

    <!-- Simulate <Toolbar /> -->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textStyle="bold"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="25dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dni"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/etDNI"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_ets"
            android:inputType="number"
            android:maxLength="8"
            android:padding="10dp"
            android:textColor="@android:color/black"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/password"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_ets"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="@android:color/black"/>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:text="@string/login"
            android:textAllCaps="false"
            android:theme="@style/btn_green"/>

    </LinearLayout>


</LinearLayout>
